Start gulp-template v1.0.2

--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "gulp-newer": "latest",
     "gulp-notify": "latest",
     "gulp-plumber": "latest",
+    "gulp-pretty-html": "latest",
     "gulp-rename": "latest",
     "gulp-replace": "latest",
     "gulp-sass": "latest",
     "gulp-svg-sprite": "latest",
-    "gulp-webp": "latest",
     "gulp-webpcss": "latest",
+    "imagemin-webp": "latest",
     "sass": "latest",
     "webp-converter": "2.2.3",
     "webpack": "latest",
