--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "gulp-svg-sprite": "latest",
     "gulp-webpcss": "latest",
     "imagemin-webp": "latest",
+    "node-sass-tilde-importer": "latest",
+    "normalize.css": "latest",
     "sass": "latest",
     "webp-converter": "2.2.3",
     "webpack": "latest",
